Fix spacing when having no separator

--- a/public/css/molecules/breadcrumb.css
+++ b/public/css/molecules/breadcrumb.css
@@ -33,11 +33,10 @@ nav.breadcrumb {
   }
 }
 
-nav.breadcrumb.no-caret {
-  ul {
-    li + li:before {
-      content: "";
-    }
+nav.breadcrumb.no-caret ul {
+  li + li:before {
+    padding: 0;
+    content: "";
   }
 }
 
